[gd_scene load_steps=24 format=1]

[ext_resource path="res://Scripts/menu_cont.gd" type="Script" id=1]
[ext_resource path="res://Fonts/ThikkPix.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Scripts/play_button.gd" type="Script" id=3]
[ext_resource path="res://Scripts/create_button.gd" type="Script" id=4]
[ext_resource path="res://Scripts/settings_button.gd" type="Script" id=5]
[ext_resource path="res://Scripts/exit_button.gd" type="Script" id=6]
[ext_resource path="res://Assets/PC Mockup 20x16.tex" type="Texture" id=7]
[ext_resource path="res://Scripts/menu_sprite.gd" type="Script" id=8]
[ext_resource path="res://Scripts/s_keybindings_button.gd" type="Script" id=9]
[ext_resource path="res://Scripts/s_back_button.gd" type="Script" id=10]
[ext_resource path="res://Scripts/settings_sprite.gd" type="Script" id=11]
[ext_resource path="res://Scripts/b_back_button.gd" type="Script" id=12]
[ext_resource path="res://Scripts/bindings_sprite.gd" type="Script" id=13]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=9]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=10]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[node name="menu_cont" type="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1024.0
script/script = ExtResource( 1 )

[node name="main_cont" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1024.0

[node name="play_button" type="Button" parent="main_cont"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 128.0
margin/top = -32.0
margin/right = -16.0
margin/bottom = -48.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play"
flat = false
align = 0
script/script = ExtResource( 3 )

[node name="create_button" type="Button" parent="main_cont"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 128.0
margin/top = -128.0
margin/right = -16.0
margin/bottom = -144.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Create"
flat = false
align = 0
script/script = ExtResource( 4 )

[node name="settings_button" type="Button" parent="main_cont"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 128.0
margin/top = -224.0
margin/right = -16.0
margin/bottom = -240.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Settings"
flat = false
align = 0
script/script = ExtResource( 5 )

[node name="exit_button" type="Button" parent="main_cont"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 128.0
margin/top = -320.0
margin/right = -16.0
margin/bottom = -336.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false
align = 0
script/script = ExtResource( 6 )

[node name="menu_sprite" type="Sprite" parent="main_cont"]

transform/pos = Vector2( 720, 608 )
transform/scale = Vector2( 4, 4 )
texture = ExtResource( 7 )
centered = false
offset = Vector2( 0, -20 )
script/script = ExtResource( 8 )

[node name="settings_cont" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1024.0

[node name="s_keybindings_button" type="Button" parent="settings_cont"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 128.0
margin/top = -32.0
margin/right = -16.0
margin/bottom = -52.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Keybindings"
flat = false
align = 0
script/script = ExtResource( 9 )

[node name="s_back_button" type="Button" parent="settings_cont"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 128.0
margin/top = -112.0
margin/right = -16.0
margin/bottom = -132.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false
align = 0
script/script = ExtResource( 10 )

[node name="settings_sprite" type="Sprite" parent="settings_cont"]

transform/pos = Vector2( 720, 608 )
transform/scale = Vector2( 4, 4 )
texture = ExtResource( 7 )
centered = false
offset = Vector2( 0, -20 )
region_rect = Rect2( 908, 73, 2, 0 )
script/script = ExtResource( 11 )

[node name="bindings_cont" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1024.0

[node name="b_back_button" type="Button" parent="bindings_cont"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 128.0
margin/top = -32.0
margin/right = -16.0
margin/bottom = -52.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false
align = 0
script/script = ExtResource( 12 )

[node name="bindings_sprite" type="Sprite" parent="bindings_cont"]

transform/pos = Vector2( 720, 608 )
transform/scale = Vector2( 4, 4 )
texture = ExtResource( 7 )
centered = false
offset = Vector2( 0, -20 )
script/script = ExtResource( 13 )

[connection signal="button_up" from="main_cont/play_button" to="main_cont/play_button" method="_on_play_button_button_up"]

[connection signal="mouse_enter" from="main_cont/play_button" to="main_cont/play_button" method="_on_play_button_mouse_enter"]

[connection signal="button_up" from="main_cont/create_button" to="main_cont/create_button" method="_on_create_button_button_up"]

[connection signal="mouse_enter" from="main_cont/create_button" to="main_cont/create_button" method="_on_create_button_mouse_enter"]

[connection signal="button_up" from="main_cont/settings_button" to="main_cont/settings_button" method="_on_settings_button_button_up"]

[connection signal="mouse_enter" from="main_cont/settings_button" to="main_cont/settings_button" method="_on_settings_button_mouse_enter"]

[connection signal="button_up" from="main_cont/exit_button" to="main_cont/exit_button" method="_on_exit_button_button_up"]

[connection signal="mouse_enter" from="main_cont/exit_button" to="main_cont/exit_button" method="_on_exit_button_mouse_enter"]

[connection signal="button_up" from="settings_cont/s_keybindings_button" to="settings_cont/s_keybindings_button" method="_on_s_keybindings_button_button_up"]

[connection signal="mouse_enter" from="settings_cont/s_keybindings_button" to="settings_cont/s_keybindings_button" method="_on_keybindings_button_mouse_enter"]

[connection signal="button_up" from="settings_cont/s_back_button" to="settings_cont/s_back_button" method="_on_s_back_button_button_up"]

[connection signal="mouse_enter" from="settings_cont/s_back_button" to="settings_cont/s_back_button" method="_on_back_button_mouse_enter"]

[connection signal="button_up" from="bindings_cont/b_back_button" to="bindings_cont/b_back_button" method="_on_b_back_button_button_up"]

[connection signal="mouse_enter" from="bindings_cont/b_back_button" to="bindings_cont/b_back_button" method="_on_b_back_button_mouse_enter"]


